# xotl.fl

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  custom.css  history.rst  index.rst  references.rst  roadmap.rst
docs/source/_static/: custom.css
docs/source/drafts/: 2018-09-15-attrs.rst  2018-11-13-pattern-matching.rst
docs/source/history/: changes-0.1.0.rst  changes-0.2.0.rst  changes-0.3.0.rst
docs/source/narrative/: language.rst  running.rst
docs/source/papers/: 2018-09-01-indentation.rst  2018-09-15-attrs.rst  2018-11-07-empty-list.rst
docs/source/papers/courses/tpl/: lecture01.rst  meta.rst
docs/source/xopgi.ql/lang/: expr-parser.txt  expressions.rst  index.rst  parsers.rst  types-parser.txt  types.rst
docs/source/xopgi.ql/translate/: basic.rst
docs/source/xotl.fl/: 01-index.rst  02-types.rst  03-expressions.rst  04-parsers.rst  05-typecheck.rst  builtins.rst  expressions.rst  indentation.rst  index.rst  parsers.rst  types.rst
src/tests/: test_graphs.py  test_typecheck.py  test_unification.py
src/tests/parsing/: test_adt.py  test_expr_parser.py  test_program_parser.py  test_types_parser.py
src/xotl/fl/: .dir-locals.el  __init__.py  _version.py  builtins.fl  builtins.py  graphs.py  graphs.pyi  match.py  meta.py  utils.py
src/xotl/fl/ast/: __init__.py  adt.py  base.py  expressions.py  pattern.py  typeclasses.py  types.py
src/xotl/fl/eval/: __init__.py  python.py
src/xotl/fl/parsers/: __init__.py  expr_parsertab.py  expressions.py  grammar.lark  larkish.py  program_parsertab.py  type_parsertab.py  types.py
src/xotl/fl/testing/strategies/: lark.py  tools.py  trees.py
src/xotl/fl/typecheck/: __init__.py  predicates.py  subst.py  unification.py
tests/: test_adt.py  test_expr_parser.py  test_graphs.py  test_parser.py  test_tarjans.py  test_translator.py  test_typecheck.py  test_types.py  test_unification.py
tests/parsing/: test_expr_parser.py  test_program_parser.py  test_types_parser.py
xopgi/: __init__.py
xopgi/ql/: __init__.py  release.py  translate.py
xopgi/ql/lang/: __init__.py  builtins.py  expr_parsertab.py  expressions.py  indentation.rst  parser.out  parsers.py  program_parsertab.py  type_parsertab.py  type_parsertab.pyi  typecheck.py  types.py
xopgi/ql/lang/eval/: machine.py  python.py
xopgi/ql/lang/expressions/: __init__.py  _exprtab.py  base.py  expr_parsertab.py  parser.out  parser.py  parsetab.py  program_parsertab.py  typecheck.py
xopgi/ql/lang/types/: __init__.py  base.py  parser.out  parser.py  parsetab.py  parsetab.pyi  typecheck.py  unification.py
xopgi/ql/lang/types/typecheck/: __init__.py
xopgi/ql/tests/: README.rst
xopgi/ql/tests/test_xopgi_ql_integration/: __manifest__.py
xopgi/ql/translate/: basic.py
xopgi/ql/translate/basic/: __init__.py  dast.py
xopgi/ql/unification/: __init__.py  algorithm.py  ast.py
xopgi/ql/unification/parser/: __init__.py  exceptions.py  tokenizer.py
xotl/fl/: __init__.py  adt.py  builtins.fl  builtins.py  expr_parsertab.py  expressions.py  graphs.py  graphs.pyi  let.py  match.py  meta.py  parser.out  parsers.py  pattern.fl  pattern.py  program_parsertab.py  release.py  tarjans.py  type_parsertab.py  typecheck.py  typeclasses.py  types.py  utils.py
xotl/fl/ast/: __init__.py  adt.py  base.py  expressions.py  pattern.py  typeclasses.py  types.py
xotl/fl/eval/: __init__.py  machine.py
xotl/fl/parsers/: __init__.py  expr_parsertab.py  expressions.py  grammar.lark  larkish.py  parser.out  program_parsertab.py  type_parsertab.py  types.py
xotl/fl/testing/strategies/: tools.py
xotl/fl/typecheck/: __init__.py  exceptions.py  predicates.py  remy.py  subst.py  unification.py
