[metadata]
name = xotl.fl
version = attr: xotl.fl.release.VERSION
description = A tiny functional language
long_description = file: README.rst
classifiers =
   Programming Language :: Python

author = Merchise Autrement [~º/~]
author_email = info@merchise.org
maintainer = Manuel Vázquez Acosta
license = GPLv3
url = https://gitlab.merchise.org/merchise/xotl.fl
project_urls =
   tracker=https://gitlab.merchise.org/merchise/xotl.fl

[options]
zip_safe = False
packages = find:
namespace_packages = xotl
include_package_data = True
python_requires = >=3.6,<3.8
install_requires =
   xoutil>=1.9.4
   ply>=3.11
   python-dateutil

[egg_info]
tag-build = .dev

[bdist_wheel]
python-tag = py3


[flake8]
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
ignore = E402,E731,E741
max-line-length = 85
