[metadata]
name = xotl.fl
version = attr: xotl.fl.release.VERSION
description = A tiny functional language
long_description = file: README.rst
classifiers =
   Programming Language :: Python

author = Merchise Autrement [~º/~]
author_email = info@merchise.org
maintainer = Manuel Vázquez Acosta
license = GPLv3
url = https://gitlab.merchise.org/merchise/xotl.fl
project_urls =
   tracker=https://gitlab.merchise.org/merchise/xotl.fl

[options]
zip_safe = False
packages = find:
namespace_packages = xotl
include_package_data = True
python_requires = >=3.6,<3.8
install_requires =
   xoutil>=1.9.9
   ply>=3.11
   python-dateutil
   dataclasses;python_version<"3.7"

[egg_info]
tag-build = .dev

[bdist_wheel]
python-tag = py3

[coverage:run]
branch = False


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

omit =
   */xotl/fl/parsers/*
   */xotl/fl/*/__init__.py
   */xotl/fl/__init__.py

fail_under = 95
skip_covered = true
show_missing = true


[flake8]
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
max-line-length = 88
select = C,E,F,W,B,B950
ignore =
	# do not assign a lambda expression, use a def
	E731

    # module level import not at top of file
	E402

	# We may break after binary operators (... and
	#                                      ...)
	W504

	# We may break before binary operators (...
	#                                       and ...)
    W503

    E203  # space before : (in slices)
	E501  # line too long (use bugbear)

	E741  # do not use variables named ‘l’, ‘O’, or ‘I’
    E126  # continuation line over-indented for hanging indent
    E252  # missing whitespace around parameter equals

    B011  # we like assert False; it's better than raise AssertionError
          # because we don't that code to survive in production

    C990

[pycodestyle]
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
max-line-length = 88
ignore =
	# do not assign a lambda expression, use a def
	E731

    # module level import not at top of file
	E402

	# We may break after binary operators (... and
	#                                      ...)
	W504

	# We may break before binary operators (...
	#                                       and ...)
    W503

    E203  # space before : (in slices)
	E501  # line too long (use bugbear)

	# do not use variables named ‘l’, ‘O’, or ‘I’
	E741
